<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="finalizar"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        style="@style/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/etInfo"
        style="@style/etText"
        android:layout_width="233dp"
        android:layout_height="72dp"
        android:ems="10"
        android:hint="@string/EtInfo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        app:layout_constraintVertical_bias="0.201" />

    <Button
        android:id="@+id/btnAccion"
        style="@style/btnCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="continuamos"
        android:text="@string/btnContinuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInfo"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/tvInfo"
        style="@style/tvVacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/MensajeOculto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAccion"
        app:layout_constraintVertical_bias="0.247" />

    <Button
        android:id="@+id/btnFin"
        style="@style/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="finalizar"
        android:text="@string/btnSalir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo"
        app:layout_constraintVertical_bias="0.906" />

</androidx.constraintlayout.widget.ConstraintLayout>